applications/base/blog/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: blog
          image: harbor.local.abbottland.io/library/blog:20261010-69-8da09bf # {"$imagepolicy": "flux-system:blog"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
