applications/base/blog/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
